<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Helper">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:autoLink="web"
            android:textColorLink="#79C620"
            android:text="@string/sp1"
            android:gravity="start" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/k1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/keyb"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sp2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/k2"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/set1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sp3"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/k3"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/set2"/>
    </LinearLayout>

</ScrollView>
