<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".WelcomScreen">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/sset"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/fscreen"
            android:textSize="30sp"
            android:checked="true"
            android:textColor="#9FBABD"
            android:text="@string/forcefull"/>
        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/GPU"
            android:checked="true"
            android:textSize="30sp"
            android:textColor="#9FBABD"
            android:text="@string/GPU"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/keyb"
            android:checked="true"
            android:textSize="30sp"
            android:textColor="#9FBABD"
            android:text="安全键盘"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:id="@+id/w8"
            android:textColor="#FFEB3B"
            android:text="关于输入法"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/startgame"
            android:textSize="30sp"
            android:textColor="#72CD5E"
            android:text="@string/startgame"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/endg"
            android:textSize="30sp"
            android:textColor="#AE033D"
            android:text="退出"/>


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/links"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/w1"
        android:layout_margin="10dp"
        android:textColor="#00BCD4"
        android:text="物品浏览器"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/w2"
        android:layout_margin="10dp"
        android:textColor="#00BCD4"
        android:text="幸存者基地（聚合性网站）"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/w3"
        android:layout_margin="10dp"
        android:textColor="#00BCD4"
        android:text="Cataclysm Dark Days Ahead 官网(英)"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/w6"
        android:layout_margin="10dp"
        android:textColor="#00BCD4"
        android:text="CataClysmDDA百科（英）"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="----资源"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/w4"
        android:layout_margin="10dp"
        android:textColor="#00BCD4"
        android:text="MOD列表一览"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/w5"
        android:layout_margin="10dp"
        android:textColor="#00BCD4"
        android:text="音乐音效包一览"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/w7"
        android:layout_margin="10dp"
        android:textColor="#00BCD4"
        android:text="简洁输入法安装"/>



</LinearLayout>
</ScrollView>
